# HaskellNet-SSL

./: HaskellNet-SSL.cabal  stack.yaml
src/Network/HaskellNet/SMTP/: SSL.hs
