name:                HaskellNet-SSL
synopsis:            Helpers to connect to SSL/TLS mail servers with HaskellNet
version:             0.3.4.1
description:         This package ties together the HaskellNet and connection
                     packages to make it easy to open IMAP and SMTP connections
                     over SSL.
homepage:            https://github.com/dpwright/HaskellNet-SSL
license:             BSD3
license-file:        LICENSE
author:              Daniel P. Wright
maintainer:          Leza M. Lutonda <lemol-c@outlook.com>, dani@dpwright.com
copyright:           (c) 2013 Daniel P. Wright
category:            Network
build-type:          Simple
cabal-version:       >=1.8
data-files:          README.md

source-repository head
  type:     git
  location: git://github.com/dpwright/HaskellNet-SSL.git

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.HaskellNet.IMAP.SSL
                       Network.HaskellNet.POP3.SSL
                       Network.HaskellNet.SMTP.SSL
                       Network.HaskellNet.SSL
  other-modules:       Network.HaskellNet.SSL.Internal
  build-depends:  base == 4.12.0.0,
                  HaskellNet == 0.5.1,
                  tls == 1.4.1,
                  connection == 0.2.8,
                  network == 2.8.0.0,
                  bytestring == 0.10.8.2,
                  data-default == 0.7.1.1
